fix things